--- a/package.json
+++ b/package.json
@@ -6,17 +6,31 @@
   "scripts": {
     "dev": "bun --watch src/app.ts",
     "start": "bun src/app.ts",
-    "build": "bun build src/app.ts --outdir dist --target bun --format cjs --minify"
+    "build": "bun build src/app.ts --outdir dist --target bun --format cjs --minify",
+    "db:init": "bun src/database/tools/init.ts",
+    "db:fresh": "bun src/database/tools/fresh.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/mime-types": "^3.0.1",
+    "pino-pretty": "^13.1.3"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
+    "@fastify/cors": "^11.2.0",
+    "@fastify/env": "^5.0.3",
+    "@fastify/helmet": "^13.0.2",
     "@fastify/multipart": "^9.4.0",
+    "@fastify/rate-limit": "^10.3.0",
+    "@fastify/sensible": "^6.0.4",
+    "@sinclair/typebox": "^0.34.48",
     "fastify": "^5.7.4",
+    "fastify-plugin": "^5.1.0",
+    "file-type": "^21.3.0",
+    "mime-types": "^3.0.2",
+    "mysql2": "^3.17.1",
     "sharp": "^0.34.5"
   }
 }
